fix: float all children of left/right-aligned captions

--- a/client/components/Editor/styles/figure.scss
+++ b/client/components/Editor/styles/figure.scss
@@ -21,23 +21,23 @@ figure {
 		pointer-events: auto;
 	}
 
-	&[data-align='left'] > :first-child {
+	&[data-align='left'] > * {
 		float: left;
 		margin: 0.5em 1.5em 0.5em 0em;
 	}
 
-	&[data-align='right'] > :first-child {
+	&[data-align='right'] > * {
 		float: right;
 		margin: 0.5em 0em 0.5em 1.5em;
 	}
 
 	@for $i from 1 through 100 {
-		&[data-size='#{$i}'] > :first-child {
+		&[data-size='#{$i}'] > * {
 			width: percentage($i/100);
 		}
 	}
 
-	&[data-align='full'] > :first-child {
+	&[data-align='full'] > * {
 		width: 100%;
 	}
 
