--- a/client/components/FormattingBar/controlComponents/controlsReference.scss
+++ b/client/components/FormattingBar/controlComponents/controlsReference.scss
@@ -5,7 +5,7 @@
 
 .controls-reference-settings-link {
 	&.dark {
-		color: #545454;
+		opacity: 0.8;
 
 		a {
 			color: #eee;
